src/pages/pages.css
.nav-bar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: rgba(55, 60, 205, 0.197);
  border-bottom: 2px solid rgba(255, 255, 255, 0.446)
}

@media only screen and (max-width: 600px) {
  .radio-background-container {
    display: grid;
    width: fit;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    font-size: 20px;
    margin: 0 auto;
  }
  .nav-bar,
  .user-information {
    display: flex;
    flex-direction: column;
    text-align: center;
  }

  .event-title-container {
    font-size: 16px;
  }

  .current-weather-container {
    font-size: 16px;
  }
}

@media only screen and (min-width: 800px) {
  .current-weather-container {
    height: 50%;
    width: 50%;
  }
}


.conditional {
  font-size: 20px;
  color: aliceblue;
  text-align: center;
  margin-top: 0px;
  text-shadow: -1px 1px 0 #000;
}

.conditional-container {
  margin-left: 0px;
}

.alert-container {
  display: flex;
  justify-content: center;
}

.weather-alert {
  text-align: center;
  font-style: italic;
  color: rgb(0, 0, 0);
  padding: 5px;
  margin-top: 0px;
}


.nav-title {
  font-size: 55px;
  margin: 10px;
  margin-bottom: 0px;
  color: rgb(255, 255, 255);
  text-shadow: -1px 1px 0 #000;
}

.main-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.radio-container {
  text-align: center;
  font-size: 25px;
  border: solid black 2px;
  background-color: rgba(240, 248, 255, 0.733);
  padding: 5px;
}

.loading-events {
  font-size: 30px;
  text-align: center;
}

.event-information-container {
  font-size: 20px;
  padding: 10px;
}

.event-title-container {
  display: flex;
  text-align: center;
  margin: 40px;
  border: 2px solid white;
  background-color: rgb(255, 255, 255);
  border-radius: 20px;
  justify-content: center;
}

.fetch-failed-container {
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  align-items: center;
  min-height: 82vh;
  background-color: rgba(39, 40, 73, 0.688)
}

.error-container {
  display: flex;
  align-content: center;
  justify-content: center;
  align-items: center;
  min-height: 82vh;
  background-color: rgba(39, 40, 73, 0.688)
}

.fetch-failed-response {
  font-size: 40px;
  margin: 40px;
  color: #fffcfc;
  padding: 10px;
  border: 2px solid red;
}

.error-icon {
  height: 80vh;
  border: 2px solid white;
}

.fetch-failed-image {
  height: 50vh;
  border: 2px solid white;
}

.event-logo {
  height: 20px;
  width: 20px;
}

.events-button {
  margin-top: 30px;
  background: none;
  border: none;
  text-decoration: none;
  color: black;
}

.event-date {
  display: flex;
  text-decoration: solid underline rgb(0, 0, 0);
  padding: 5px;
  align-items: center;
}

.filtered-events {
  text-align: center;
}

label {
  margin: 5px;
}

h5 {
  margin: 5px;
}

.event-title {
  font-size: 40px;
  text-align: center;
  font-style: italic;
  color: rgb(255, 255, 255);
  margin: 20px 15px 15px 0;
  text-shadow: -1px 1px 0 #000;
}

.user-information {
  display: flex;
  width: 100%;
  justify-content: space-between
}

.current-city,
.current-date {
  font-size: 25px;
  font-style: italic;
  margin: 10px;
}

label {
  margin: 20px;
}

.loading-data-container {
  display: flex;
  align-content: center;
  text-align: center;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.current-weather-container {
  background-color: rgba(255, 255, 255, 0.4);
  border: 8px solid rgb(0, 0, 0);
  width: fit-content;
  height: fit-content;
  padding: 20px;
  margin: 30px 40px 5px 40px;
  text-align: center;
}

.home-button,
.daily-button {
  text-shadow: -1px 1px 0 #000;
  text-align: center;
  font-weight: bold;
  text-decoration: none;
  font-size: 25px;
  color: rgb(255, 251, 251);
  margin: 10px;
  margin-right: 20px;
  cursor: pointer;
  display: inline-block;
  position: relative;
}

.home-button:after,
.daily-button:after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color:
    #ffffff;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.home-button:hover:after,
.daily-button:hover:after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

.loading-icon {
  height: 40px;
  width: 40px;
  margin: 20px;
}

button {
  cursor: pointer;
}

h3 {
  margin: 12px;
}

.event-whole-container {
  min-height: 100vh;
  margin: 0px;
  background-image: url('../components/images/clear-sky-background1.jpeg');

}

